# instavibe-adk

./: README.md  Updates.md  cloudbuild.yaml  requirements.txt
a2a/: pyproject.toml
a2a/common/: task_manager.py
a2a/common/server/: server.py
a2a/remote/: remote_agent_connection.py
agents/: requirements.txt
agents/app/: agent_engine_app.py
agents/introvertally/: .env  a2a_server.py  agent.py  instavibe_client.py  introvertally_agent.py
agents/orchestrate/: .env  README.md  agent.py  deploy.py  host_agent.py  requirements.txt  run_orchestrator.py
agents/planner/: .env  Dockerfile  a2a_server.py  agent.py  agent_executor.py  planner_agent.py  planner_client.py  planner_eval.evalset.json  requirements.txt
agents/planner/.adk/eval_history/: planner_planner_eval_1750731352.394338.evalset_result.json  planner_planner_eval_1750731381.0776844.evalset_result.json
agents/platform_mcp_client/: .env  Dockerfile  a2a_server.py  agent.py  agent_executor.py  requirements.txt
agents/social/: .env  Dockerfile  a2a_server.py  agent.py  agent_executor.py  instavibe.py  requirements.txt  social_agent.py
instavibe/: ally_routes.py  introvertally.py  requirements.txt  temp_endpoint.txt
instavibe/templates/: base.html
runners/: remote_agent.py  remote_delete.py
shortcut/: install_all.sh  remove.sh  set_mapkey.sh
tools/: Dockerfile  instavibe.py  mcp_server.py
tools/instavibe/: instavibe.py  mcp_server.py
