
[project]
name = "a2a-common"
version = "0.1.0"
description = "Common utilities and models for the A2A project"
readme = "README.md" # Optional: Specify if you have a README
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "httpx-sse>=0.4.0",
    "jwcrypto>=1.5.6",
    "pydantic>=2.10.6",
    "pyjwt>=2.10.1",
    "sse-starlette>=2.2.1",
    "starlette>=0.46.1",
    "typing-extensions>=4.12.2",
    "uvicorn>=0.34.0",
]

[tool.hatch.build.targets.wheel]
packages = ["common","remote"]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
